--- a/app/src/main/res/layout/home_main_row.xml
+++ b/app/src/main/res/layout/home_main_row.xml
@@ -12,7 +12,7 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="200sp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/imgcoffee2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
