--- a/app/src/main/res/layout/togo_row.xml
+++ b/app/src/main/res/layout/togo_row.xml
@@ -7,13 +7,15 @@
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="15dp">
+
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="200sp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@drawable/imgcoffee2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
