--- a/app/src/main/res/layout/activity_home_research.xml
+++ b/app/src/main/res/layout/activity_home_research.xml
@@ -55,7 +55,7 @@
             android:id="@+id/img_search"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/searchsvg"
+            android:src="@drawable/searchicon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -96,7 +96,14 @@
 
             />
 
-
+        <ImageView
+            android:id="@+id/img_filter"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/tune1x"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
