back버튼 색상 변경 및 결과화면 adpater 수정

--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -25,7 +25,7 @@
             android:id="@+id/img_back"
             android:layout_width="16sp"
             android:layout_height="16sp"
-            android:src="@drawable/icon_back_home"
+            android:src="@drawable/back3x"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="반려동물과 어디로 여행가세요?"
+            android:text="반려동물과 어디로 놀러가세요?"
             android:textColor="@color/textForBlack"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -105,7 +105,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:text="단독주택"
+                        android:text="전체"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -149,7 +149,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="캠핑장"
+                        android:text="카페"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -191,7 +191,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="도심"
+                        android:text="식당"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -232,7 +232,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="시골"
+                        android:text="공원"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
@@ -275,7 +275,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="해변"
+                        android:text="쇼핑몰"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
