--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -294,7 +294,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:gravity="center"
-                        android:text="미용"
+                        android:text="호텔"
                         android:textColor="@color/textForBlack"
                         android:textSize="14dp"
                         app:layout_constraintBottom_toBottomOf="parent"
