결과화면 검색 후 정렬 수정

--- a/app/src/main/res/layout/fragment_home_res_one.xml
+++ b/app/src/main/res/layout/fragment_home_res_one.xml
@@ -177,7 +177,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="미용"
+                android:text="쇼핑몰"
                 android:textColor="@color/textForBlack"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -254,7 +254,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="숙박"
+                android:text="호텔"
                 android:textColor="@color/textForBlack"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
