--- a/app/src/main/res/layout/fragment_home_res_two.xml
+++ b/app/src/main/res/layout/fragment_home_res_two.xml
@@ -46,7 +46,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="훈련장"
+                android:text="미용"
                 android:textColor="@color/textForBlack"
                 android:textSize="16dp"
                 app:layout_constraintStart_toStartOf="parent"
