--- a/app/src/main/res/layout/acc_main_imageslide.xml
+++ b/app/src/main/res/layout/acc_main_imageslide.xml
@@ -9,7 +9,7 @@
         android:id="@+id/img_main"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent" />
 
 
